--- a/AdaptiveSun/AdaptiveSun/Base.lproj/Main.storyboard
+++ b/AdaptiveSun/AdaptiveSun/Base.lproj/Main.storyboard
@@ -1,26 +1,141 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="landscape">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AdaptiveSun" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="70V-MO-s45">
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6S5-Bh-0wq">
+                                <rect key="frame" x="0.0" y="187.5" width="667" height="187.5"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eXN-NF-Ph2">
+                                        <rect key="frame" x="0.0" y="0.0" width="667" height="94.5"/>
+                                        <subviews>
+                                            <label userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sunny" textAlignment="natural" lineBreakMode="tailTruncation" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="CMD-du-0JC">
+                                                <rect key="frame" x="8" y="8" width="651" height="78.5"/>
+                                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="400"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="CMD-du-0JC" firstAttribute="leading" secondItem="eXN-NF-Ph2" secondAttribute="leading" constant="8" id="D8J-dE-F3h"/>
+                                            <constraint firstAttribute="trailing" secondItem="CMD-du-0JC" secondAttribute="trailing" constant="8" id="EDz-on-0V4"/>
+                                            <constraint firstItem="CMD-du-0JC" firstAttribute="top" secondItem="eXN-NF-Ph2" secondAttribute="top" constant="8" id="Nh1-hq-5Va"/>
+                                            <constraint firstAttribute="bottom" secondItem="CMD-du-0JC" secondAttribute="bottom" constant="8" id="qDJ-L7-PYG"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0F0-2J-82b" userLabel="Button Container">
+                                        <rect key="frame" x="0.0" y="94.5" width="667" height="93"/>
+                                        <subviews>
+                                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XcY-oi-VgH" userLabel="Previous">
+                                                <rect key="frame" x="8" y="27.5" width="37.5" height="37"/>
+                                                <state key="normal" image="Previous"/>
+                                            </button>
+                                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6vt-Ro-XYd" userLabel="Play">
+                                                <rect key="frame" x="315" y="27.5" width="37" height="37"/>
+                                                <state key="normal" image="Play"/>
+                                            </button>
+                                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CAI-AY-lNH" userLabel="Next">
+                                                <rect key="frame" x="622" y="27.5" width="37" height="37"/>
+                                                <state key="normal" image="Next"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="CAI-AY-lNH" firstAttribute="width" secondItem="XcY-oi-VgH" secondAttribute="width" id="9Dl-lU-O7T"/>
+                                            <constraint firstItem="6vt-Ro-XYd" firstAttribute="width" secondItem="XcY-oi-VgH" secondAttribute="width" id="ATS-l2-L4Y"/>
+                                            <constraint firstItem="XcY-oi-VgH" firstAttribute="height" secondItem="0F0-2J-82b" secondAttribute="height" constant="-56" id="BmM-Sh-wEd"/>
+                                            <constraint firstItem="CAI-AY-lNH" firstAttribute="height" secondItem="XcY-oi-VgH" secondAttribute="height" id="S0p-Mc-Z66"/>
+                                            <constraint firstItem="6vt-Ro-XYd" firstAttribute="centerX" secondItem="0F0-2J-82b" secondAttribute="centerX" id="VTV-E2-ecO"/>
+                                            <constraint firstAttribute="trailing" secondItem="CAI-AY-lNH" secondAttribute="trailing" constant="8" id="b3e-KE-eF1"/>
+                                            <constraint firstItem="XcY-oi-VgH" firstAttribute="leading" secondItem="0F0-2J-82b" secondAttribute="leading" constant="8" id="icX-Ip-Csu"/>
+                                            <constraint firstItem="6vt-Ro-XYd" firstAttribute="height" secondItem="XcY-oi-VgH" secondAttribute="height" id="nDR-pD-RDi"/>
+                                            <constraint firstItem="6vt-Ro-XYd" firstAttribute="centerY" secondItem="0F0-2J-82b" secondAttribute="centerY" id="nXl-zL-sTf"/>
+                                            <constraint firstItem="CAI-AY-lNH" firstAttribute="centerY" secondItem="0F0-2J-82b" secondAttribute="centerY" id="nmN-YK-RTC"/>
+                                            <constraint firstItem="XcY-oi-VgH" firstAttribute="centerY" secondItem="0F0-2J-82b" secondAttribute="centerY" id="stz-Kq-cb3"/>
+                                            <constraint firstItem="XcY-oi-VgH" firstAttribute="width" secondItem="0F0-2J-82b" secondAttribute="height" constant="-56" id="wf5-lm-oy9"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="0.59033890845070425" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="0F0-2J-82b" secondAttribute="bottom" id="Edh-ge-S2x"/>
+                                    <constraint firstItem="0F0-2J-82b" firstAttribute="leading" secondItem="6S5-Bh-0wq" secondAttribute="leading" id="NKe-xy-0f8"/>
+                                    <constraint firstItem="eXN-NF-Ph2" firstAttribute="top" secondItem="6S5-Bh-0wq" secondAttribute="top" id="QGe-fY-m2N"/>
+                                    <constraint firstItem="eXN-NF-Ph2" firstAttribute="height" secondItem="6S5-Bh-0wq" secondAttribute="height" multiplier="0.5" id="SLc-fu-Zzb"/>
+                                    <constraint firstAttribute="trailing" secondItem="eXN-NF-Ph2" secondAttribute="trailing" id="YCM-b3-CPi"/>
+                                    <constraint firstItem="eXN-NF-Ph2" firstAttribute="leading" secondItem="6S5-Bh-0wq" secondAttribute="leading" id="eCd-1o-9lU"/>
+                                    <constraint firstAttribute="trailing" secondItem="0F0-2J-82b" secondAttribute="trailing" id="z68-ky-tiB"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="efh-rF-wcX">
+                                <rect key="frame" x="0.0" y="0.0" width="311" height="188"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="WaO-bD-ZbL">
+                                        <rect key="frame" x="268" y="27.5" width="131" height="131.5"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="WaO-bD-ZbL" firstAttribute="centerY" secondItem="efh-rF-wcX" secondAttribute="centerY" id="8kC-CQ-90r"/>
+                                    <constraint firstItem="WaO-bD-ZbL" firstAttribute="centerX" secondItem="efh-rF-wcX" secondAttribute="centerX" id="Sfb-sR-A1D"/>
+                                    <constraint firstItem="WaO-bD-ZbL" firstAttribute="height" secondItem="efh-rF-wcX" secondAttribute="height" multiplier="0.7" id="Tsb-vn-Rdm"/>
+                                    <constraint firstItem="WaO-bD-ZbL" firstAttribute="width" secondItem="efh-rF-wcX" secondAttribute="height" multiplier="0.7" id="d3n-MH-4Po"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="70V-MO-s45" secondAttribute="trailing" id="D4P-86-mec"/>
+                            <constraint firstItem="6S5-Bh-0wq" firstAttribute="height" secondItem="70V-MO-s45" secondAttribute="height" multiplier="0.5" id="E2P-G4-yYH"/>
+                            <constraint firstAttribute="trailing" secondItem="6S5-Bh-0wq" secondAttribute="trailing" id="IyS-Aw-SEK"/>
+                            <constraint firstItem="6S5-Bh-0wq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KUv-xN-AJY"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6S5-Bh-0wq" secondAttribute="bottom" id="KhD-aH-mm1"/>
+                            <constraint firstItem="70V-MO-s45" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Qnq-an-mxw"/>
+                            <constraint firstItem="70V-MO-s45" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="e4U-NU-gF4"/>
+                            <constraint firstItem="efh-rF-wcX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="qdV-Z4-aaZ"/>
+                            <constraint firstItem="0F0-2J-82b" firstAttribute="height" secondItem="70V-MO-s45" secondAttribute="height" multiplier="0.25" id="rxx-JH-NUm"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="70V-MO-s45" secondAttribute="bottom" id="tF9-4B-JS9"/>
+                            <constraint firstItem="efh-rF-wcX" firstAttribute="height" secondItem="70V-MO-s45" secondAttribute="height" multiplier="0.5" id="trD-gf-Udk"/>
+                            <constraint firstAttribute="trailing" secondItem="efh-rF-wcX" secondAttribute="trailing" id="xjM-SV-rkG"/>
+                            <constraint firstItem="efh-rF-wcX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="yDu-7E-5qe"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="984.55772113943033" y="208.80000000000001"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Next" width="57" height="57"/>
+        <image name="Play" width="59" height="59"/>
+        <image name="Previous" width="57" height="57"/>
+        <image name="Sun" width="518" height="505"/>
+        <image name="background" width="1280" height="480"/>
+    </resources>
 </document>
